[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-hashlock"
version = "0.1.0"
description = "LangChain tools for Hashlock — swap any asset (crypto, RWA, stablecoins) with private sealed bids and verified counterparties"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Hashlock Technologies", email = "dev@hashlock.markets"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business :: Financial",
]
keywords = ["langchain", "hashlock", "defi", "trading", "intent", "rwa", "stablecoins", "otc", "sealed-bid"]
dependencies = [
    "langchain-core>=0.2.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Hashlock-Tech/langchain-hashlock"
Repository = "https://github.com/Hashlock-Tech/langchain-hashlock"
Documentation = "https://hashlock.markets/docs"
Issues = "https://github.com/Hashlock-Tech/langchain-hashlock/issues"

[tool.setuptools.packages.find]
include = ["langchain_hashlock*"]

